# fun_with_astroids

./: ART-ASSETS.md  GAME-DESIGN.md  IDEAS.md  README.md  ROADMAP.md  SPACECRAFT.md  TECHNICAL-SPEC.md  pyproject.toml
docs/: educational-notes.md  gameplay-loop.md  skill-tree.md
src/fun_with_asteroids/: __init__.py  config.py  entities.py  game.py  progression.py  scoring.py
tests/: __init__.py  test_progression.py  test_scoring.py
